fix issue with page titles overlapping

--- a/style.scss
+++ b/style.scss
@@ -429,13 +429,13 @@ tbody tr:nth-child(odd) th {
 
   &-title {
     @include title();
-    margin-bottom: -0.6rem;
+    margin-bottom: -0.3rem;
     margin-left: -0.1rem;
 
   }
 
   &-title--small {
-    margin-top: -0.5rem;
+    // margin-top: -0.5rem;
     margin-bottom: 1rem;
     @include title-small();
     display: inline;
@@ -447,7 +447,7 @@ tbody tr:nth-child(odd) th {
   }
 
   &-nav {
-    margin-top: -0.5rem;
+    // margin-top: -0.5rem;
     margin-bottom: 1rem;
     @include title-small();
     a + a {
